--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "hydra-ffmpeg-api",
   "version": "1.0.0",
-  "main": "server.js",
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.4.0",
-    "form-data": "^4.0.0"
+    "multer": "^1.4.5-lts.1",
+    "axios": "^1.6.2"
   }
 }
