--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "fluent-ffmpeg": "^2.1.2"
   }
 }
